--- a/index.ipynb
+++ b/index.ipynb
@@ -146,6 +146,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "This is a test"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### View All Shortcuts\n",
     "\n",
     "Press the key `h` while in escape mode to view the menu for all of Jupyter's shortcuts."
